--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.6.6
   flutter_svg: ^2.0.10+1
+  google_fonts: ^6.2.1
+  percent_indicator: ^4.2.3
+  shared_preferences: ^2.3.2
+  country_code_picker: ^3.0.0
 
 dev_dependencies:
   flutter_test:
