--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   percent_indicator: ^4.2.3
   shared_preferences: ^2.3.2
   country_code_picker: ^3.0.0
+  flutter_easyloading: ^3.0.5
+  otp_text_field: ^1.1.3
 
 dev_dependencies:
   flutter_test:
