--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   country_code_picker: ^3.0.0
   flutter_easyloading: ^3.0.5
   otp_text_field: ^1.1.3
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
